fixed the overlapping issue

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -36,6 +36,10 @@ i.icon {
 	margin-top: 3em;
 }
 
+.text {
+	margin-bottom: 5em;
+}
+
 .footer {
 	position: absolute;
 	bottom: 0;
